--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "autoprefixer": "^10.4.22",
+    "dompurify": "^3.3.1",
     "firebase": "^12.6.0",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
